fixing-overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,6 @@
   font-family: "Fascinate", cursive;
   font-family: "Open Sans", sans-ser;
 }
-body {
-  overflow-x: hidden;
-}
 a {
   text-decoration: none;
   color: #fff;
@@ -49,16 +46,17 @@ a {
   margin: 10px 0;
   font-size: 18px;
 }
+.summerimage-wrapper {
+  position: relative;
+  overflow: hidden;
+}
 .summer-image {
   display: flex;
-  width: 350px;
-  height: 350px;
+  width: 320px;
+  height: 320px;
   border-radius: 70%;
   margin: auto;
   justify-content: center;
-}
-.summerimage-wrapper {
-  position: relative;
 }
 .summer-deco {
   opacity: 0;
@@ -240,6 +238,10 @@ a {
   color: #f81765;
 }
 @media only screen and (min-width: 768px) {
+  .summer-image {
+    width: 500px;
+    height: 500px;
+  }
   .card-wrapper {
     display: flex;
     justify-content: center;
@@ -259,10 +261,6 @@ a {
   .location {
     width: 220px;
     margin-top: 20px;
-  }
-  .summer-image {
-    width: 500px;
-    height: 500px;
   }
 }
 @media only screen and (min-width: 1000px) {
